8310194: Generational ZGC: Lock order asserts in JVMTI IterateThroughHeap